# umg-monorepo

./: .gitignore  SETUP_COMPLETE.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: claude.md
.claude/commands/: commit.md  pr-submit.md  pre-commit.md  pull-and-delete.md
apps/ai-core/: .env.example  .gitignore  config.py  main.py  requirements.txt  test_extractor.py
apps/ai-core/agents/: archivist.py  feedback_processor.py  mentor.py
apps/ai-core/engines/: .!18616!relationship_engine.py  relationship_engine.py
apps/ai-core/models/: __init__.py  chat.py  chunk.py  dismissed_pattern.py  edge.py  embedding.py  entity.py  entity_relationship.py  entity_with_signal.py  insight.py  (+2 more)
apps/api/: main.py  requirements.txt
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: package.json
docs/: 30-day-implementation-roadmap.md  ARCHITECTURE.md  ai-quickstart.md  google-sso-implementation-plan.md  raw-input-text-implementation-plan.md
docs/migrations/: 00_initial_schema.sql  README.md  add_entity_reference_tracking.sql  add_mentor_indexes.sql  add_relationship_engine_columns.sql  add_source_event_id_to_edge.sql  create_dismissed_patterns_table.sql  refactor_edges_table_schema.sql
docs/project-wide-resources/: ai-memory.md  brain-reference.md  database-structure.md  human-memory.md  project-overview.md  technical-guide.md
scripts/: reprocess-event.sh  reprocess-with-new-extractor.sh  run-mentor-migrations.js  run-migration.ts  seed-mentor-test-data.py  verify-mentor-migrations.ts
(+95 files in other folders)
