[package]
name = "umg-desktop"
version = "0.1.0"
description = "UMG Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "umg_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
